Creación de sección sobre mí y cambios estéticos a otras secciones

--- a/css/bases.css
+++ b/css/bases.css
@@ -1,6 +1,7 @@
 :root {
 
     --background-blanco: #ffffff;
+    --background-azul-claro: #EAF2FD;
     --color-gris-fuerte: #464646;
 
     --raleway: 'Raleway', sans-serif;
