Creación de sección Experiencia Profesional

--- a/css/bases.css
+++ b/css/bases.css
@@ -4,6 +4,8 @@
     --background-blanco-oscuro: #F5F5F5;
     --background-azul-claro: #EAF2FD;
     --color-gris-fuerte: #464646;
+    --color-azul: #2A7AE4;
+    --color-azul-cielo: #70A5EA;
 
     --raleway: 'Raleway', sans-serif;
 }
