--- a/css/bases.css
+++ b/css/bases.css
@@ -6,6 +6,8 @@
     --color-gris-fuerte: #464646;
     --color-azul: #2A7AE4;
     --color-azul-cielo: #70A5EA;
+    --color-gris-claro: #A2A2A2;
+    --color-gris-linea: #C8C8C8;
 
     --raleway: 'Raleway', sans-serif;
 }
