--- a/css/bases.css
+++ b/css/bases.css
@@ -20,3 +20,10 @@ body {
     padding-left: 12%;
     padding-right: 12%;
 }
+
+@media screen and (min-width:0px) and (max-width: 1024px) {
+    .container {
+        padding-left: 6%;
+        padding-right: 6%;
+    }
+}
