--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -49,6 +49,10 @@
     text-align: start;
 }
 
+.experiencia__botones {
+    text-align: start;
+}
+
 .experiencia__repositorio {
     font-family: var(--raleway);
     font-size: 0.90rem;
@@ -94,4 +98,32 @@
     background-color: var(--color-azul-cielo);
     padding: 0.75rem;
     cursor: pointer;
+}
+
+@media screen and (min-width:768px) and (max-width:1024px) {
+    .experiencia__imagen {
+        width: 100%;
+    }
+    
+    .experiencia__seccion--derecha {
+        flex-direction: column;
+    }
+    
+    .experiencia__seccion--izquierda {
+        flex-direction: column;
+    }
+
+    .experiencia__informacion {
+        padding-left: 0;
+        padding-top: 1rem;
+    }
+
+    .experiencia__nombre {
+        font-size: 1rem;
+    }
+
+    .experiencia__botones {
+        padding-top: 0.3rem;
+    }
+
 }
