--- a/css/hobbies.css
+++ b/css/hobbies.css
@@ -26,7 +26,6 @@
     flex-direction: column;
     justify-content: end;
     text-align: start;
-    flex-wrap: wrap;
     font-weight: bold;
 }
 
@@ -42,4 +41,20 @@
 .hobbies__imagen {
     margin-bottom: 1rem;
     width: 38px;
+}
+
+@media screen and (min-width:768px) and (max-width: 1024px) {
+    .hobbies {
+        margin-bottom: 2rem;
+    }
+
+    .hobbies__lista {
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .hobbies__item {
+        width: calc((100% / 3) - 60px);
+        margin-top: 1rem;
+        height: 90px;
+    }
 }
