--- a/css/skills.css
+++ b/css/skills.css
@@ -19,14 +19,13 @@
 .skills__item {
     background-color: var(--background-blanco);
     padding: 1rem;
-    width: calc((100% / 3) - 40px);
+    width: calc((100% / 3) - 50px);
     height: 174px;
     margin-right: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: end;
     text-align: start;
-    flex-wrap: wrap;
     font-weight: bold;
     
 }
@@ -42,4 +41,13 @@
 .skills__imagen {
     margin-bottom: 1rem;
     width: 28px;
+}
+
+@media screen and (min-width: 768px) and (max-width:1024px) {
+    .skills__lista {
+        flex-wrap: wrap;
+    }
+    .skills__item {
+        height: 90px;
+    }
 }
