--- a/css/sobreMi.css
+++ b/css/sobreMi.css
@@ -25,3 +25,11 @@
     height: 80px;
     margin-top: 0.75rem;
 }
+
+@media screen and (min-width:768px) and (max-width:1024px) {
+    .sobreMi {
+        padding-right: 6%;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+}
