Creación de validación del formulario de contacto

--- a/css/bases.css
+++ b/css/bases.css
@@ -8,6 +8,7 @@
     --color-azul-cielo: #70A5EA;
     --color-gris-claro: #A2A2A2;
     --color-gris-linea: #C8C8C8;
+    --color-rojo: #FF0000;
 
     --raleway: 'Raleway', sans-serif;
 }
